--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 
 
-<script type="text/javascript" src="first.js"></script>
-
+<!-- <script type="text/javascript" src="first.js"></script> -->
+<script type="text/javascript" src="lesson-2.js"></script>
   
 </body>
 </html>
