--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 
 <!-- <script type="text/javascript" src="first.js"></script> -->
-<script type="text/javascript" src="lesson-2.js"></script>
+<!-- <script type="text/javascript" src="lesson-2.js"></script> -->
+<script type="text/javascript" src="lesson-3.js"></script>
   
 </body>
 </html>
