--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <!-- <script type="text/javascript" src="first.js"></script> -->
 <!-- <script type="text/javascript" src="lesson-2.js"></script> -->
-<script type="text/javascript" src="lesson-3.js"></script>
+<!-- <script type="text/javascript" src="lesson-3.js"></script> -->
+<script type="text/javascript" src="lesson-4.js"></script>
+
   
 </body>
 </html>
