--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <!-- <script type="text/javascript" src="lesson-2.js"></script> -->
 <!-- <script type="text/javascript" src="lesson-3.js"></script> -->
 <!-- <script type="text/javascript" src="lesson-4.js"></script> -->
-<script type="text/javascript" src="lesson-5.js"></script>
+<!-- <script type="text/javascript" src="lesson-5.js"></script>-->
+<script type="text/javascript" src="lesson-6.js"></script>
 
 </body>
 </html>
