--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 <!-- <script type="text/javascript" src="lesson-3.js"></script> -->
 <!-- <script type="text/javascript" src="lesson-4.js"></script> -->
 <!-- <script type="text/javascript" src="lesson-5.js"></script>-->
-<script type="text/javascript" src="lesson-6.js"></script>
+<!-- <script type="text/javascript" src="lesson-6.js"></script>-->
+<script type="text/javascript" src="lesson-7.js"></script>
+
+
 
 </body>
 </html>
