--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <!-- <script type="text/javascript" src="lesson-4.js"></script> -->
 <!-- <script type="text/javascript" src="lesson-5.js"></script>-->
 <!-- <script type="text/javascript" src="lesson-6.js"></script>-->
-<script type="text/javascript" src="lesson-7.js"></script>
-
+<!-- <script type="text/javascript" src="lesson-7.js"></script> -->
+<script type="text/javascript" src="lesson-8.js"></script>
 
 
 </body>
