--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <!-- <script type="text/javascript" src="lesson-6.js"></script>-->
 <!-- <script type="text/javascript" src="lesson-7.js"></script> -->
 <!-- <script type="text/javascript" src="lesson-8.js"></script> -->
-<script type="text/javascript" src="lesson-9.js"></script>
+<!-- <script type="text/javascript" src="lesson-9.js"></script> -->
+<script type="text/javascript" src="lesson-10.js"></script>
+
 
 </body>
 </html>
