--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <!-- <script type="text/javascript" src="lesson-7.js"></script> -->
 <!-- <script type="text/javascript" src="lesson-8.js"></script> -->
 <!-- <script type="text/javascript" src="lesson-9.js"></script> -->
-<script type="text/javascript" src="lesson-10.js"></script>
-
+<!-- <script type="text/javascript" src="lesson-10.js"></script> -->
+<script type="text/javascript" src="lesson-11.js"></script>
 
 </body>
 </html>
